Added specific memory parameters for the JUnit task at requst of a number of people. For the moment using Alex's argument set and values but someone needs top experiment in case Danno's are better. Anecdotal evidence indicates UberTestCase3 runs slower on Russel's machine with these parameters compared to the defaults.
git-svn-id: http://svn.codehaus.org/groovy/trunk/groovy/groovy-core@6118 a5544e8c-8a19-0410-ba12-f9af4593a198