@@ -121,8 +121,7 @@ $Date$
             description="Compile the Java and Groovy code in the examples source directory.">
         <mkdir dir="${examplesClassesDirectory}"/>
         <javac srcdir="${examplesSourceDirectory}" destdir="${examplesClassesDirectory}" includeantruntime="false"
-               debug="yes"
-               source="1.4" target="1.4" fork="true">
+               debug="yes" source="1.4" target="1.4" fork="true">
             <classpath>
                 <pathelement path="${mainClassesDirectory}"/>
                 <path refid="compilePath"/>
@@ -130,7 +129,7 @@ $Date$
             </classpath>
         </javac>
         <echo message="Groovyc of example code."/>
-        <java classname="org.codehaus.groovy.ant.Groovyc" fork="true" maxmemory="128M">
+        <java classname="org.codehaus.groovy.ant.Groovyc" fork="true">
             <classpath>
                 <pathelement path="${mainClassesDirectory}"/>
                 <pathelement path="${examplesClassesDirectory}"/>
@@ -161,6 +160,7 @@ $Date$
     <target name="-testOne" if="testOne">
         <mkdir dir="${junitRawDirectory}"/>
         <junit printsummary="true" fork="true" includeantruntime="false" haltonfailure="yes">
+      <jvmarg line="-Xms${groovyJUnit_ms} -Xmx${groovyJUnit_mx} -XX:PermSize=${groovyJUnit_permSize} -XX:MaxPermSize=${groovyJUnit_maxPermSize}"/>
             <test name="${testCase}" todir="${junitRawDirectory}"/>
             <formatter type="brief" usefile="false"/>
             <classpath>
